--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ button:hover { transform: scale(1.05); }
 </div>
 
 <!-- 🐭 Cute Mouse -->
-<img src="https://media.tenor.com/9Jj0pGmH6Q0AAAAi/cute-mouse.gif" class="mouse-animal">
+<img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXk2dWx2Mm02M29ob3QwNWMwZGg2NWdsaDIwYWZuaXo1bHpqNzl5aiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/am7VuuVSqxkcJ1vSFK/giphy.gif" class="mouse-animal">
 
 <!-- 🎵 Background Music -->
 <audio id="bgMusic" loop>
